# uml-generator

./: README.md  pyproject.toml  run-uml.sh
outputs/: uml-Cat.md  uml-Movie.md
src/app/: uml.py
